@@ -28,6 +28,13 @@
       <artifactId>commons-module</artifactId>
       <version>${commons.module.version}</version>
     </dependency>
+
+      <dependency>
+          <groupId>org.jala.university</groupId>
+          <artifactId>transaction-module</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+
     <!--    Third-party libs-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -55,6 +62,12 @@
       <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
     </dependency>
+    <!-- Database Dependencies -->
+    <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.2.0</version>
+</dependency>
     <!-- Unit Test Dependecies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -68,15 +81,35 @@
       <version>5.5.0</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.googlecode.json-simple</groupId>
+          <artifactId>json-simple</artifactId>
+          <version>1.1.1</version>
+      </dependency>
   </dependencies>
 
-  <!-- Should be included when add dependency to other gitlab project
+
     <repositories>
       <repository>
-        <id>base-module-repo</id>
-        <url>https://gitlab.com/api/v4/projects/{project_code}/packages/maven</url>
+        <id>commons-module-repo</id>
+        <url>https://gitlab.com/api/v4/projects/74907211/packages/maven</url>
       </repository>
-    </repositories> -->
+       <repository>
+        <id>transaction-module-repo</id>
+        <url>https://gitlab.com/api/v4/projects/74907273/packages/maven</url>
+      </repository>
+    </repositories>
+    <distributionManagement>
+    <repository>
+      <id>gitlab-maven</id>
+      <url>https://gitlab.com/api/v4/projects/74907241/packages/maven</url>
+    </repository>
+    <snapshotRepository>
+      <id>gitlab-maven</id>
+      <url>https://gitlab.com/api/v4/projects/74907241/packages/maven</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <build>
     <plugins>
       <plugin>
@@ -103,8 +136,34 @@
         <version>${javafx.maven.plugin.version}</version>
         <configuration>
           <mainClass>org.jala.university.presentation.MainView</mainClass>
+          <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang=ALL-UNNAMED</option>
+          </options>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.5.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>org.jala.university.MainApp</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
+
+
 </project>
